- pts-core: Improved detection of file downloads that fail and serve HTML 404/not found responses
- pts-core: Convert to a JSON-based representation instead of XML for the pts-download-cache file
- pts-core: Various file hash checking improvements during test installation
- pts-core: Allow Phoronix Test Suite clients to automatically discover Phoromatic download-cache archives
- phoromatic: Begin allowing results to be stored locally, not dependent on OpenBenchmarking.org storage
- phoromatic: Advertise Phoromatic Server using Avahi zero-conf networking service when avahi-publish available and AdvertiseServiceZeroConf user config option is TRUE
- phoromatic: Automatically setup download-cache over Phoromatic HTTP with the system's local download-cache archive
- phodevi: Allow GPU frequency detection for DRM/KMS drivers when no X Server DDX is detected
- phodevi: Allow multiple providers for one VFS entry in case of failure in prior commands/files
- phodevi: Allow reading X Server log from the systemd journalctl

Phoronix Test Suite 5.4 Milestone 1
5 September 2014

- pts-core: Sanitize pts_result_file user strings
- pts-core: Don't set memory_limit with HHVM
- pts-core: Drop phoromatic_legacy support (old Phoromatic.com version)
- system_monitor: Correct perf-per-Watt calculation for LIB results
- phodevi: Support Nouveau's pstate formatting changes to read core/mem MHz on newer kernels
- phodevi: Support for reading monitor EDID over sysfs, decoding descriptors, and obtaining monitor name (should improve monitor name reporting for Intel Linux systems)
- phodevi: Improved SoC detection
- pts_LineGraph: Alignment fix for keys

Phoronix Test Suite 5.2.1-Khanino
11 July 2014

- pts-core: Add VDPAU as a dependency to the xorg-video external dependency on more platforms
- pts-core: Don't check OpenBenchmarking.org credentials when the network is down
- pts-core: Rework result-file-to-text sub-command, show text-based graph results